--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- i am a comment (a browser ignores comments as it renders the code) -->
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,18 +9,26 @@
     <body>
         <h1>hello world!</h1>
         <h2>Nice to meet you!</h2>
-        <img src="images/world.png" alt="the earth saying hello and the moon">
+        <img src="images/hello-world.png" alt="the earth saying hello and the moon">
         <h3>"Hello, World!" program</h3>
         <p>A "Hello, World!" program generally is a computer program that outputs or displays the message "Hello, World!". Such a program is very simple in most programming languages, and is often used to illustrate the basic syntax of a programming language. It is often the first program written by people learning to code. It can also be used as a sanity test to make sure that computer software intended to compile or run source code is correctly installed, and that the operator understands how to use it.</p>
-        <h4>Note that HTML is not a programming language:</h4>
+        <h4>Note that HTML is not a programming language</h4>
         <p>The HyperText Markup Language, or <strong>HTML</strong> is the standard markup language for documents designed to be displayed in a web browser.</p>
         <p>It can be assisted by technologies such as</p>
         <ul>
             <li>Cascading Style Sheets (<strong>CSS</strong>)</li>
             <li>and scripting languages such as <strong>JavaScript</strong>.</li>
         </ul>
-        <p>Source: <a href="https://wikipedia.org/">Wikipedia</a></p>
-        <p>Created with the help of <a href="https://developer.mozilla.org/en-US/docs/Learn">MDN (Mozilla Developer Network) Web Docs</a></p>
+        <h5>Sources:</h5>
+        <ol>
+            <li>
+                <p>Created along with the beginner-friendly learning resource <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web">"Getting started with the Web"</a> from the <a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a> (previously Mozilla Developer Network and formerly Mozilla Developer Center).</p>
+            </li>
+            <li>
+                <p>Definitions: <a href="https://wikipedia.org/">Wikipedia</a></p>
+            </li>
+        </ol>
+        <h6>Change your name:</h6>
         <button>Change user</button>
         <script src="scripts/main.js"></script>
     </body>
