change "page" to "site"

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ol>
         <h6>Change your name:</h6>
         <button>Change user</button>
-        <a href="https://glmvc.github.io/first-site-upgrade/"><h6>Check out the upgraded version of this page!</h6></a>
+        <a href="https://glmvc.github.io/first-site-upgrade/"><h6>Check out the upgraded version of this site!</h6></a>
         <script src="scripts/main.js"></script>
     </body>
 </html>
