improve text content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>Nice to meet you!</h2>
         <img src="images/hello-world.png" alt="the earth saying hello and the moon">
         <h3>"Hello, World!" program</h3>
-        <p>A "Hello, World!" program generally is a computer program that outputs or displays the message "Hello, World!". Such a program is very simple in most programming languages, and is often used to illustrate the basic syntax of a programming language. It is often the first program written by people learning to code. It can also be used as a sanity test to make sure that computer software intended to compile or run source code is correctly installed, and that the operator understands how to use it.</p>
+        <p>A "Hello, World!" program is generally a simple computer program which outputs (or displays) to the screen (often the console) a message similar to "Hello, World!" while ignoring any user input. A small piece of code in most general-purpose programming languages, this program is used to illustrate a language's basic syntax. A "Hello, World!" program is often the first written by a student of a new programming language, but such a program can also be used as a sanity check to ensure that the computer software intended to compile or run source code is correctly installed, and that its operator understands how to use it.</p>
         <h4>Note that HTML is not a programming language</h4>
         <p>The HyperText Markup Language, or <strong>HTML</strong> is the standard markup language for documents designed to be displayed in a web browser.</p>
         <p>It can be assisted by technologies such as</p>
